[gd_scene load_steps=2 format=2]

[ext_resource path="res://levelChange.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="HTTPRequest5" type="HTTPRequest" parent="."]
use_threads = true

[node name="HTTPRequest6" type="HTTPRequest" parent="."]

[node name="HTTPRequest7" type="HTTPRequest" parent="."]

[node name="HTTPRequest8" type="HTTPRequest" parent="."]

[node name="displayranking2" type="Button" parent="."]
margin_top = 310.0
margin_right = 80.0
margin_bottom = 340.0

[node name="Label" type="Label" parent="displayranking2"]
margin_left = 20.0
margin_right = 66.0
margin_bottom = 14.0
text = "ranking"

[node name="LineEdit" type="LineEdit" parent="displayranking2"]
margin_left = 90.0
margin_right = 148.0
margin_bottom = 24.0

[node name="ScrollContainer2" type="ScrollContainer" parent="."]
margin_top = 340.0
margin_right = 270.0
margin_bottom = 500.0

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer2"]
[connection signal="request_completed" from="HTTPRequest5" to="." method="_on_HTTPRequest5_request_completed"]
[connection signal="request_completed" from="HTTPRequest7" to="." method="_on_HTTPRequest7_request_completed"]
[connection signal="request_completed" from="HTTPRequest8" to="." method="_on_HTTPRequest8_request_completed"]
[connection signal="pressed" from="displayranking2" to="." method="_on_displayranking2_pressed"]
